[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runcycles"
version = "0.2.0"
description = "Python client for the Cycles budget-management protocol"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = [
    "cycles",
    "budget",
    "cost-control",
    "metering",
    "ai",
    "llm",
    "agents",
    "governance",
    "openai",
    "anthropic",
    "langchain",
    "runcycles",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-httpx>=0.30",
    "mypy>=1.0",
    "ruff>=0.1",
    "respx>=0.21",
    "jsonschema>=4.20",
    "pyyaml>=6.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["runcycles"]

[tool.coverage.report]
fail_under = 95
